fix layout issues, redirect update profile, changed profile layout

--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -6,8 +6,8 @@
 }
 .badge {
   position: absolute;
-  // top: -1px;
-  // right: -1px;
+  top: -1px;
+  right: -1px;
   font-size: 10px;
   color: white;
   display: flex;
